--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".global.MApplication_"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
         <activity android:name=".view.activity.MainActivity_">
