--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "pro.luxun.luxunanimation"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -45,5 +45,10 @@ dependencies {
     compile 'nl.littlerobots.rxlint:rxlint:1.0'
 
     compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'jp.wasabeef:blurry:2.0.2'
 
+    compile 'com.github.google:ExoPlayer:r1.5.7'
+    compile 'com.commit451:NativeStackBlur:1.0.2'
 }
