--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 def AAVersion = '4.0.0'
+def AndroidVersion = '23.3.0'
 
 android {
     compileSdkVersion 23
@@ -29,11 +30,11 @@ dependencies {
     compile "org.androidannotations:androidannotations-api:$AAVersion"
 
     //support
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:design:23.3.0'
-    compile 'com.android.support:cardview-v7:23.3.0'
-    compile 'com.android.support:recyclerview-v7:23.3.0'
-    compile 'com.android.support:support-v4:23.3.0'
+    compile "com.android.support:appcompat-v7:$AndroidVersion"
+    compile "com.android.support:design:$AndroidVersion"
+    compile "com.android.support:cardview-v7:$AndroidVersion"
+    compile "com.android.support:recyclerview-v7:$AndroidVersion"
+    compile "com.android.support:support-v4:$AndroidVersion"
 
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
@@ -50,7 +51,9 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'jp.wasabeef:blurry:2.0.2'
 
-    compile 'com.github.google:ExoPlayer:r1.5.7'
+    compile 'com.github.google:ExoPlayer:r1.5.8'
     compile 'com.commit451:NativeStackBlur:1.0.2'
     compile 'com.makeramen:roundedimageview:2.2.1'
+    compile 'com.daimajia.easing:library:1.0.1@aar'
+    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
 }
