--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*.iml
 # Built application files
 *.apk
 *.ap_
@@ -15,6 +16,7 @@ gen/
 # Gradle files
 .gradle/
 build/
+/*/build/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -25,8 +27,6 @@ proguard/
 # Log Files
 *.log
 
-# Android Studio Navigation editor temp files
-.navigation/
-
-# Android Studio captures folder
-captures/
+# Android Studio
+.idea
+.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
