--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'nl.littlerobots.rxlint:rxlint:1.0'
 
+    compile 'org.greenrobot:eventbus:3.0.0'
+
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
     compile 'com.nineoldandroids:library:2.4.0'
@@ -55,4 +57,5 @@ dependencies {
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile 'com.daimajia.easing:library:1.0.1@aar'
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
+
 }
