1、基本完成评论列表，评论；

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
                 <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.AnimationDetailActivity_">
+        <activity android:name=".view.activity.AnimationDetailActivity_"
+                  android:windowSoftInputMode="adjustPan">
         </activity>
         <activity
             android:name=".view.activity.VideoActivity_"
