--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,6 @@ dependencies {
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile 'me.zhanghai.android.materialprogressbar:library:1.1.6'
 
+    compile 'com.github.ctiao:DanmakuFlameMaster:0.4.6'
 
 }
