1、推进弹幕； 2、优化播放（okHTTP）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         <activity
             android:name=".view.activity.VideoActivity_"
             android:theme="@style/AppTheme.VideoTheme"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="adjustPan">
         </activity>
         <activity android:name=".view.activity.SplashActivity_"
             android:theme="@style/AppTheme.SplashTheme">
