--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,12 +50,14 @@ dependencies {
     compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
     compile 'com.nineoldandroids:library:2.4.0'
 
-    compile 'com.github.google:ExoPlayer:r1.4.2'
+    compile 'com.github.google:ExoPlayer:r1.5.8'
+
     compile 'com.commit451:NativeStackBlur:1.0.2'
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile 'com.daimajia.easing:library:1.0.1@aar'
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     compile 'com.makeramen:roundedimageview:2.2.1'
+    compile 'com.github.johnpersano:supertoasts:1.3.4@aar'
     compile 'me.zhanghai.android.materialprogressbar:library:1.1.6'
 
     compile 'com.github.ctiao:DanmakuFlameMaster:0.4.6'
