--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
     compile 'com.nineoldandroids:library:2.4.0'
 
-    compile 'com.github.google:ExoPlayer:r1.5.8'
+    compile 'com.github.google:ExoPlayer:r1.4.2'
 
     compile 'com.commit451:NativeStackBlur:1.0.2'
     compile 'com.makeramen:roundedimageview:2.2.1'
@@ -62,4 +62,5 @@ dependencies {
 
     compile 'com.github.ctiao:DanmakuFlameMaster:0.4.6'
 
+    compile 'com.umeng.analytics:analytics:6.0.1'
 }
