--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
           package="pro.luxun.luxunanimation">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:name=".global.MApplication_"
@@ -13,6 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
+
+        <meta-data android:value="574c4fb767e58e8520001624" android:name="UMENG_APPKEY" />
+        <meta-data android:value="Wandoujia" android:name="UMENG_CHANNEL"/>
+
         <activity android:name=".view.activity.MainActivity_">
             <intent-filter>
                 <data android:scheme="luxun" />
